# Neophysics

./: CMakeLists.txt  LICENSE  README.md  update_log.txt
include/neophysics/: allocator.h  core2d.h  fixed_allocator.h  mat3x3.h  mat4x4.h  math.h  pool.h  quat.h  real2.h  real3.h  real4.h  synchronizer.h  types.h
include/neophysics/core3d/: body3d.h  hash3d.h  island3d.h  variant3d.h  world3d.h
neophysics/: core2d.h
src/neophysics/: baumgarte_stabilization.h  compiler_hint.h  decay.h  exponential.h  fixed_allocator.c  logarithm.h  mat3x3.c  mat4x4.c  math.c  math.h  pool.c  quat.c  trigonometry.h
src/neophysics/core3d/: body3d.c  island3d.c  world3d.c
src/neophysics/p2d/: area2d.h  body2d.h  broadphase2d.h  buffer_components2d.h  contact_hash2d.h  contact_manifold2d.h  container_body2d.h  core2d.c  world_components2d.h
